--- a/proyecto/cartech_web/carrito/templates/listar_carrito.html
+++ b/proyecto/cartech_web/carrito/templates/listar_carrito.html
@@ -1,43 +1,111 @@
 {% extends "base/base.html" %}
 {% load static %}
 {% block title %}
+Carrito
 {% endblock %}
 {% block content %}
-<body>
+<div class="bg-light py-3">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 mb-0"><a href="index.html">Inicio</a> <span class="mx-2 mb-0">/</span> <strong class="text-black">Carrito</strong></div>
+        </div>
+    </div>
+</div>
+
 <div class="site-section">
     <div class="container">
-        <div class="row mb-5 justify-content-center">
-            <div class="col-md-9 order-2">
-                <h2 class="text-center mb-4">Carrito</h2>
+        <div class="row mb-5">
+            <form class="col-md-12" method="post">
+                <div class="site-blocks-table">
+                    <table class="table table-bordered">
+                        <thead>
+                            <tr>
+                                <th class="product-thumbnail">Imagen</th>
+                                <th class="product-name">Producto</th>
+                                <th class="product-price">Precio</th>
+                                <th class="product-quantity">Cantidad</th>
+                                <th class="product-total">Total</th>
+                                <th class="product-remove">Eliminar</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for eleccion in elecciones %}
+                                {% with coche=eleccion.coche %}
+                                    <tr>
+                                        <td class="product-thumbnail">
+                                            <img src="{{ coche.imagen.url }}" alt="{{ coche.modelo }}" class="img-fluid">
+                                        </td>
+                                        <td class="product-name">
+                                            <h2 class="h5 text-black"><a href="{{ pedido.id }}">{{ coche.marca }} {{ coche.modelo }}</a></h2>
+                                            <p>Combustible: {{ coche.combustible }}</p>
+                                            <p>Conducción: {{ coche.conduccion }}</p>
+                                            <p>Accesorios:</p>
+                                            <ul style="list-style: none; padding: 0;">
+                                                {% for accesorio in eleccion.accesorios.all %}
+                                                    <li>{{ accesorio.nombre }} - Precio: {{ accesorio.precio }} €</li>
+                                                {% endfor %}
+                                            </ul>
+                                            <p style="font-size: 1.2em;">Precio base: {{ eleccion.get_precio_base }} €</p>
+                                        </td>
+                                        <td>{{ eleccion.get_precio_unitario }} €</td>
+                                        <td>
+                                            <div class="input-group mb-3" style="max-width: 120px;">
+                                                <div class="input-group-prepend">
+                                                    <a href="{% url 'carrito:add' eleccion.id %}" class="btn btn-outline-primary">+</a>
+                                                    <span class="input-group-text">{{ eleccion.cantidad }}</span>
+                                                    <a href="{% url 'carrito:delete' eleccion.id %}" class="btn btn-outline-primary">-</a>
+                                                </div>
+                                            </div>
+                                        </td>
+                                        <td>{{ eleccion.get_precio_total }} €</td>
+                                        <td><a href="{% url 'carrito:delete' eleccion.id %}" class="btn btn-primary btn-sm">X</a></td>
+                                    </tr>
+                                {% endwith %}
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+            </form>
+        </div>
+
+        <div class="row">
+            <div class="col-md-6">
                 <div class="row mb-5">
-                    {% for eleccion in elecciones %}
-                    <div class="col-12 mb-4" data-aos="fade-up">
-                        <div class="block-4 text-center border">
-                            <div class="block-4-text p-4">
-                                <p class="mb-0"><a href="{{ pedido.id }}">Coche: {{ eleccion.coche.marca }} {{ eleccion.coche.modelo }}</a></p>
-                                <p class="mb-0">Combustible: {{ eleccion.coche.combustible }}</p>
-                                <p class="mb-0">Conducción: {{ eleccion.coche.conduccion }}</p>
-                                <p class="mb-0">Accesorios:</p>
-                                <ul style="list-style: none; padding: 0;">
-                                    {% for accesorio in eleccion.accesorios.all %}
-                                    <li>{{ accesorio.nombre }} - Precio: {{ accesorio.precio }} €</li>
-                                    {% endfor %}
-                                </ul>
-                                <p class="mb-0" style="font-size: 1.2em;">Precio Total del Coche: {{ eleccion.get_precio_total }} €</p>
+                    <div class="col-md-6 mb-3 mb-md-0">
+                        <button onclick="window.location='{% url "shop:listado_coches" %}'" class="btn btn-primary btn-sm btn-block">Continuar Comprando</button>
+                    </div>
+                    <div class="col-md-6">
+                        <a href="{% url 'carrito:checkout' %}" class="btn btn-outline-primary btn-sm btn-block">Realizar Pedido</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 pl-5">
+                <div class="row justify-content-end">
+                    <div class="col-md-7">
+                        <div class="row">
+                            <div class="col-md-12 text-right border-bottom mb-5">
+                                <h3 class="text-black h4 text-uppercase">Total del Carrito:</h3>
                             </div>
-                            <div class="block-4-buttons p-4">
-                                <p class="mb-0">Cantidad: {{ eleccion.cantidad }}</p>
-                                <a href="{% url 'carrito:add' eleccion.id %}" class="btn btn-success">Añadir</a>
-                                <a href="{% url 'carrito:delete' eleccion.id %}" class="btn btn-danger">Quitar</a>
+                        </div>
+
+                        <div class="row mb-5">
+                            <div class="col-md-6">
+                                <span class="text-black">Total</span>
+                            </div>
+                            <div class="col-md-6 text-right">
+                                <strong class="text-black">{{ precio_total|floatformat:"2" }} €</strong>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col-md-12">
+                                <a href="{% url 'carrito:checkout' %}" class="btn btn-primary btn-lg py-3 btn-block">Continuar al Pago</a>
                             </div>
                         </div>
                     </div>
-                    {% endfor %}
                 </div>
-                <a href="{% url 'carrito:checkout' %}" class="btn btn-primary">Seguir pedido</a>
             </div>
         </div>
     </div>
 </div>
-</body>
 {% endblock %}
