--- a/proyecto/cartech_web/shop/templates/base/base.html
+++ b/proyecto/cartech_web/shop/templates/base/base.html
@@ -6,7 +6,8 @@
     <title>{% block title %}Django E-commerce{% endblock %}</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Mukta:300,400,700">
     <link rel="stylesheet" href="{% static "fonts/icomoon/style.css" %}">
     <link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}">
