fix crear opinion e incidencia

--- a/proyecto/cartech_web/incidencias/templates/crear_incidencia.html
+++ b/proyecto/cartech_web/incidencias/templates/crear_incidencia.html
@@ -22,26 +22,11 @@
                 <div class="card-body">
                     <h5 class="card-title">Crear Incidencia</h5>
                         <br/>
-                    <form method="post" action="{% url 'incidencias:crear_incidencia' %}" class="needs-validation"
-                        novalidate>
-                        {% csrf_token %}
-                        <div class="mb-3">
-                            {{ form.descripcion.label_tag }}
-                            {{ form.descripcion }}
-                            <div class="invalid-feedback">
-                                {{ form.descripcion.errors }}
-                            </div>
-                        </div>
-                        <br/>
-                        <label for="urgencia">Tipo de urgencia</label>
-                        <select class="form-control" id="urgencia" name="urgencia">
-                            <option value="baja" {% if urgencia == 'baja' %}selected{% endif %}>Baja</option>
-                            <option value="media" {% if urgencia == 'media' %}selected{% endif %}>Media</option>
-                            <option value="alta" {% if urgencia == 'alta' %}selected{% endif %}>Alta</option>
-                        </select>
-                        <br/>
-                        <button type="submit" class="btn btn-primary">Guardar</button>
-                    </form>
+                        <form method="post" action="{% url 'incidencias:crear_incidencia' %}" class="needs-validation" novalidate>
+                            {% csrf_token %}
+                            {{ form.as_p }}
+                            <button type="submit" class="btn btn-primary">Guardar</button>
+                        </form>
                 </div>
             </div>
         </div>
