--- a/proyecto/cartech_web/incidencias/templates/listar_incidencias.html
+++ b/proyecto/cartech_web/incidencias/templates/listar_incidencias.html
@@ -44,7 +44,7 @@
                         <div class="block-4 text-center border">
                             <div class="block-4-text p-4">
                                 <p class="mb-0">Usuario: {{ incidencia.usuario.first_name }}</p>
-                                <p class="mb-0">Incidencia: {{ incidencia.descripcion }}</p>
+                                <p class="mb-0">Titulo: {{ incidencia.titulo }}</p>
                                 <p class="text-primary font-weight-bold">Urgencia: {{ incidencia.urgencia }}</p>
                                 <a href="{% url "incidencias:borrar_incidencia" incidencia.id %}"><button type="button" class="btn btn-danger btn-smb" name="eliminar">Eliminar</button></a>
 
