--- a/proyecto/cartech_web/incidencias/templates/mis_incidencias.html
+++ b/proyecto/cartech_web/incidencias/templates/mis_incidencias.html
@@ -25,7 +25,7 @@
                     <div class="col-sm-6 col-lg-4 mb-4" data-aos="fade-up">
                         <div class="block-4 text-center border">
                             <div class="block-4-text p-4">
-                                <p class="mb-0">Incidencia: {{ incidencia.descripcion }}</p>
+                                <p class="mb-0">Titulo: {{ incidencia.titulo }}</p>
                                 <p class="text-primary font-weight-bold">Urgencia: {{ incidencia.urgencia }}</p>
                             </div>
                         </div>
