--- a/proyecto/cartech_web/opiniones/templates/mis_opiniones.html
+++ b/proyecto/cartech_web/opiniones/templates/mis_opiniones.html
@@ -1,13 +1,12 @@
 {% extends "base/base.html" %}
 {% load static %}
 {% block title %}
-{% if category %}{{ category.name }}{% else %}Incidencias{% endif %}
 {% endblock %}
 {% block content %}
 <div class="bg-light py-3">
     <div class="container">
         <div class="row">
-            {% with base_url="/opiniones/" %}
+            {% with base_url="/" %}
             <div class="col-md-12 mb-0"><a href="{{ base_url }}">Opiniones</a> <span class="mx-2 mb-0">/</span> <strong
                     class="text-black">Mis opiniones</strong></div>
             {% endwith %}
@@ -23,8 +22,18 @@
                     <div class="col-sm-6 col-lg-4 mb-4" data-aos="fade-up">
                         <div class="block-4 text-center border">
                             <div class="block-4-text p-4">
+                                <p class="mb-0">Usuario: {{ opinion.usuario.first_name }}</p>
                                 <p class="mb-0">Descripcion: {{ opinion.descripcion }}</p>
-                                <p class="text-primary font-weight-bold">Valoración: {{ opinion.valoracion }}</p>
+                                <div class="text-primary font-weight-bold">
+                                    Valoración:
+                                    {% for i in "12345" %}
+                                        {% if i|add:0 <= opinion.valoracion %}
+                                            <i class="fas fa-star"></i>
+                                        {% else %}
+                                            <i class="far fa-star"></i>
+                                        {% endif %}
+                                    {% endfor %}
+                                </div>
                             </div>
                         </div>
                     </div>
