--- a/proyecto/cartech_web/shop/templates/base/footer.html
+++ b/proyecto/cartech_web/shop/templates/base/footer.html
@@ -1,49 +1,41 @@
 <footer class="site-footer border-top">
     <div class="container">
         <div class="row">
-            <div class="col-lg-6 mb-5 mb-lg-0">
+            <div class="col-lg-4 mb-5 mb-lg-0">
                 <div class="row">
                     <div class="col-md-12">
-                        <h3 class="footer-heading mb-4">Navigations</h3>
+                        <h3 class="footer-heading mb-4">Nosotros Tu Cuenta</h3>
                     </div>
-                    <div class="col-md-6 col-lg-4">
+                    <div class="col-md-6">
                         <ul class="list-unstyled">
-                            <li><a href="#">Sell online</a></li>
-                            <li><a href="#">Features</a></li>
-                            <li><a href="#">Shopping cart</a></li>
-                            <li><a href="#">Store builder</a></li>
+                            <li><a href="/about">Quienes Somos?</a></li>
+                            <li><a href="/incidencias">Atención al Cliente</a></li>
+                            <li><a href="/contact">Contacto</a></li>
                         </ul>
                     </div>
-                    <div class="col-md-6 col-lg-4">
+                    <div class="col-md-6">
                         <ul class="list-unstyled">
-                            <li><a href="#">Mobile commerce</a></li>
-                            <li><a href="#">Dropshipping</a></li>
-                            <li><a href="#">Website development</a></li>
+                            <li><a href="/signup">Crear Cuenta</a></li>
+                            <li><a href="accounts/login/">Datos de Usuario</a></li>
+                            <li><a href="pedidos/me">Seguir Pedido</a></li>
                         </ul>
-                    </div>
-                    <div class="col-md-6 col-lg-4">
-                        <ul class="list-unstyled">
-                            <li><a href="#">Point of sale</a></li>
-                            <li><a href="#">Hardware</a></li>
-                            <li><a href="#">Software</a></li>
-                        </ul>
-                    </div>
+                    </div>                    
                 </div>
             </div>
-            <div class="col-md-6 col-lg-3 mb-4 mb-lg-0">
-                <h3 class="footer-heading mb-4">Promo</h3>
+            <div class="col-lg-4 mb-4 mb-lg-0">
+                <h3 class="footer-heading mb-4">Promociones</h3>
                 <a href="#" class="block-6">
-                    <h3 class="font-weight-light  mb-0">Finding Your Perfect Cars</h3>
-                    <p>Promo from January 15 &mdash; 25, 2019</p>
+                    <h3 class="font-weight-light  mb-0">Entrega express gratuita con pedidos superiores a 25000€</h3>
+                    <p>Activa desde &mdash; 01/12/2023</p>
                 </a>
             </div>
-            <div class="col-md-6 col-lg-3">
+            <div class="col-lg-4">
                 <div class="block-5 mb-5">
-                    <h3 class="footer-heading mb-4">Contact Info</h3>
+                    <h3 class="footer-heading mb-4">Información de Contacto</h3>
                     <ul class="list-unstyled">
-                        <li class="address">203 Fake St. Mountain View, San Francisco, California, USA</li>
-                        <li class="phone"><a href="tel://23923929210">+2 392 3929 210</a></li>
-                        <li class="email">maquidin@domain.com</li>
+                        <li class="address">Calle Camino de la Pañoleta, 55, La Carlota, Córdoba, España</li>
+                        <li class="phone"><a href="tel://+34955162485">+34 955162485</a></li>
+                        <li class="email">info@cartechweb.com</li>
                     </ul>
                 </div>
             </div>
