--- a/proyecto/cartech_web/shop/templates/base/navbar.html
+++ b/proyecto/cartech_web/shop/templates/base/navbar.html
@@ -72,7 +72,7 @@
                     <li><a href="{% url "shop:selector" %}">Configurador coches</a></li>
                     <li><a href="/incidencias/">Incidencias</a></li>
                     <li><a href="{% url "pedidos:mis_pedidos" %}">Mis pedidos</a></li>
-                    <li><a href="shop.html">About</a></li>
+                    <li><a href="about.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
@@ -87,7 +87,7 @@
                 <li><a href="/incidencias/">Incidencias</a></li>
                 <li><a href="{% url "pedidos:mis_pedidos" %}">Mis pedidos</a></li>
                 <li><a href="{% url "pedidos:buscar_pedido" %}">Pedidos</a></li>
-                <li><a href="shop.html">About</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
