--- a/proyecto/cartech_web/shop/templates/home.html
+++ b/proyecto/cartech_web/shop/templates/home.html
@@ -3,48 +3,83 @@
 {% load crispy_forms_tags %} 
 {% block content %}
 
-  <div class="container">
+<div class="container">
     <div class="row align-items-start align-items-md-center justify-content-end">
-      <div class="col-md-5 text-center text-md-left pt-5 pt-md-0">
-        <h1 class="mb-2">Finding Your Perfect Shoes</h1>
-        <div class="intro-text text-center text-md-left">
-          <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus at iaculis quam. Integer accumsan tincidunt fringilla. </p>
-          <p>
-            <a href="#" class="btn btn-sm btn-primary">Shop Now</a>
-          </p>
+        <div class="col-md-5 text-center text-md-left pt-5 pt-md-0">
+            <h1 class="mb-2">Encuentra el Coche Perfecto para Ti</h1>
+            <div class="intro-text text-center text-md-left">
+                <p class="mb-4">Explora nuestra amplia gama de modelos de coches y personaliza tu vehículo según tus preferencias.</p>
+                <p>
+                    <a href="/coches/selector" class="btn btn-sm btn-primary">Explorar Modelos</a>
+                </p>
+            </div>
         </div>
-      </div>
+
+        <div class="col-md-7">
+            
+          <div id="carouselExample" class="carousel slide" data-ride="carousel" style="max-width: 500px; margin: 0 auto; margin: 20px auto 0;">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="../../media/imagenes/home1.jpeg" class="d-block mx-auto" style="width: 500px; height: 300px;" alt="Coche 1">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../../media/imagenes/home2.jpeg" class="d-block mx-auto" style="width: 500px; height: 300px;" alt="Coche 2">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../../media/imagenes/home3.jpeg" class="d-block mx-auto" style="width: 500px; height: 300px;" alt="Coche 3">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../../media/imagenes/home4.jpeg" class="d-block mx-auto" style="width: 500px; height: 300px;" alt="Coche 4">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="../../media/imagenes/home5.jpeg" class="d-block mx-auto" style="width: 500px; height: 300px;" alt="Coche 5">
+                </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExample" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExample" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+            <!-- Fin del Carrusel -->
+        </div>
     </div>
-  </div>
+</div>
+
+<br>
+<br>
 
   <div class="site-section site-section-sm site-blocks-1">
     <div class="container">
       <div class="row">
         <div class="col-md-6 col-lg-4 d-lg-flex mb-4 mb-lg-0 pl-4" data-aos="fade-up" data-aos-delay="">
           <div class="icon mr-4 align-self-start">
-            <span class="icon-truck"></span>
+            <span class="icon-car"></span> 
           </div>
           <div class="text">
-            <h2 class="text-uppercase">Free Shipping</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus at iaculis quam. Integer accumsan tincidunt fringilla.</p>
+            <h2 class="text-uppercase">Variedad de Modelos</h2>
+            <p>Descubre nuestra amplia selección de modelos de coches, desde combustión hasta vehículos eléctricos.</p>
           </div>
         </div>
         <div class="col-md-6 col-lg-4 d-lg-flex mb-4 mb-lg-0 pl-4" data-aos="fade-up" data-aos-delay="100">
           <div class="icon mr-4 align-self-start">
-            <span class="icon-refresh2"></span>
+            <span class="icon-settings"></span>
           </div>
           <div class="text">
-            <h2 class="text-uppercase">Free Returns</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus at iaculis quam. Integer accumsan tincidunt fringilla.</p>
+            <h2 class="text-uppercase">Personalización</h2>
+            <p>Configura tu coche a medida, seleccionando características y opciones que se adapten a tu estilo y necesidades.</p>
           </div>
         </div>
         <div class="col-md-6 col-lg-4 d-lg-flex mb-4 mb-lg-0 pl-4" data-aos="fade-up" data-aos-delay="200">
           <div class="icon mr-4 align-self-start">
-            <span class="icon-help"></span>
+            <span class="icon-key"></span> 
           </div>
           <div class="text">
-            <h2 class="text-uppercase">Customer Support</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus at iaculis quam. Integer accumsan tincidunt fringilla.</p>
+            <h2 class="text-uppercase">Entrega y Soporte</h2>
+            <p>Ofrecemos opciones de entrega flexibles y un equipo de soporte dedicado para ayudarte en cada paso del proceso.</p>
           </div>
         </div>
       </div>
