--- a/proyecto/cartech_web/carrito/templates/checkout.html
+++ b/proyecto/cartech_web/carrito/templates/checkout.html
@@ -6,24 +6,53 @@ Checkout
 {% block content %}
 <div class="container">
     <h1 class="text-center">Checkout</h1>
-    <div class="order-info">
-        <h3 class="text-center">Your order</h3>
-        <ul>
-            {% for eleccion in elecciones %}
-            <li>
-                <img src="{{ eleccion.coche.imagen.url }}" alt="{{ eleccion.coche.modelo }}" width="100" height="100">
-                {{ eleccion.cantidad }}x {{ eleccion.coche.modelo }}
-                <span>${{ eleccion.get_precio_total }}</span>
-            </li>
-            {% endfor %}
-        </ul>
-        <h4>Total: ${{ cart.get_total_price }}</h4>
+    <div class="row">
+        <div class="col-md-8">
+            <div class="order-info">
+                <h3 class="text-center">Tu pedido</h3>
+                <table class="table table-bordered">
+                    <thead>
+                        <tr>
+                            <th class="text-center align-middle">Imagen</th>
+                            <th class="text-center align-middle">Producto</th>
+                            <th class="text-center align-middle">Cantidad</th>
+                            <th class="text-center align-middle">Precio unitario</th>
+                            <th class="text-center align-middle">Precio total</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for eleccion in elecciones %}
+                        <tr>
+                            <td class="text-center align-middle">
+                                <img src="{{ eleccion.coche.imagen.url }}" alt="{{ eleccion.coche.modelo }}" width="100" height="100">
+                            </td>
+                            <td class="align-middle">
+                                <p class="text-center"><strong>{{ eleccion.cantidad }}x {{ eleccion.coche.modelo }}</strong></p>
+                                <p style="margin-bottom: 5px; text-align: center;">Combustible: {{ eleccion.coche.combustible }}</p>
+                                <p style="margin-bottom: 5px; text-align: center;">Conducción: {{ eleccion.coche.conduccion }}</p>
+                                <p style="margin-bottom: 0; text-align: center;">Accesorios:</p>
+                                <ul style="list-style: none; padding: 0; margin: 0; text-align: center;">
+                                    {% for accesorio in eleccion.accesorios.all %}
+                                    <li>{{ accesorio.nombre }} - Precio: {{ accesorio.precio }} €</li>
+                                    {% endfor %}
+                                </ul>
+                            </td>
+                            <td class="text-center align-middle">{{ eleccion.cantidad }}</td>
+                            <td class="text-center align-middle">{{ eleccion.get_precio_unitario }} €</td>
+                            <td class="text-center align-middle">{{ eleccion.get_precio_total }} €</td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+                <h4 class="text-center">Total: {{ precio_total }} €</h4>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <form method="post" class="order-form">
+                {{ form|crispy }}
+                <p><input class="btn btn-primary btn-sm btn-block" type="submit" value="Realizar Pedido"></p>
+            </form>
+        </div>
     </div>
-    <form method="post" class="order-form">
-    
-        {{ form|crispy }}
-        <p>Hola</p>
-        <p><input class="btn btn-primary btn-sm btn-block" type="submit" value="Place order"></p>
-    </form>
 </div>
 {% endblock %}
