--- a/proyecto/cartech_web/shop/templates/coches/selector.html
+++ b/proyecto/cartech_web/shop/templates/coches/selector.html
@@ -18,15 +18,15 @@
         }
 
         section a {
-            width: 25%; /* Ancho ajustado para distribuir equitativamente las imágenes */
+            width: 25%; 
             height: 100%;
-            overflow: hidden; /* Añadido para ocultar cualquier desbordamiento de contenido */
+            overflow: hidden; 
             position: relative;
             text-decoration: none;
         }
 
         section a:hover {
-            width: 70%; /* Ancho ajustado para la animación al pasar el ratón */
+            width: 70%;
         }
 
         section img {
@@ -34,11 +34,11 @@
             height: 100%;
             object-fit: cover;
             opacity: .8;
-            transition: opacity 0.7s ease-in-out; /* Añadida la transición a opacity */
+            transition: opacity 0.7s ease-in-out;
         }
 
         section a:hover img {
-            opacity: 1; /* Ajuste de la opacidad en el hover */
+            opacity: 1;
         }
 
         .overlay {
@@ -47,14 +47,14 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: rgba(0, 0, 0, 0.5); /* Color de fondo oscuro */
+            background: rgba(0, 0, 0, 0.5); 
             color: white;
             display: flex;
             align-items: center;
             justify-content: center;    
             text-align: center;
             opacity: 0;
-            transition: opacity 0.3s ease-in-out; /* Transición de la opacidad */
+            transition: opacity 0.3s ease-in-out; 
         }
 
         section a:hover .overlay {
