--- a/proyecto/cartech_web/shop/templates/base/footer.html
+++ b/proyecto/cartech_web/shop/templates/base/footer.html
@@ -4,20 +4,19 @@
             <div class="col-lg-4 mb-5 mb-lg-0">
                 <div class="row">
                     <div class="col-md-12">
-                        <h3 class="footer-heading mb-4">Nosotros Tu Cuenta</h3>
+                        <h3 class="footer-heading mb-4">Enlaces de interés</h3>
                     </div>
                     <div class="col-md-6">
                         <ul class="list-unstyled">
                             <li><a href="/about">Quienes Somos?</a></li>
                             <li><a href="/incidencias">Atención al Cliente</a></li>
-                            <li><a href="/contact">Contacto</a></li>
+                            
                         </ul>
                     </div>
                     <div class="col-md-6">
                         <ul class="list-unstyled">
                             <li><a href="/signup">Crear Cuenta</a></li>
-                            <li><a href="accounts/login/">Datos de Usuario</a></li>
-                            <li><a href="pedidos/me">Seguir Pedido</a></li>
+                            <li><a href="/contact">Contacto</a></li>
                         </ul>
                     </div>                    
                 </div>
