fix html coches

--- a/proyecto/cartech_web/shop/templates/coches/listar_coches.html
+++ b/proyecto/cartech_web/shop/templates/coches/listar_coches.html
@@ -106,7 +106,7 @@
     </div>
     <script>
         function resetFilters(event) {
-            var url = "/";
+            var url = "/coches/list";
             window.location.href = url
         }
     </script>
