--- a/proyecto/cartech_web/shop/templates/coches/listar_electricos.html
+++ b/proyecto/cartech_web/shop/templates/coches/listar_electricos.html
@@ -89,7 +89,7 @@
     </div>
     <script>
         function resetFilters(event) {
-            var url = "/";
+            var url = "/coches/list/electricos";
             window.location.href = url
         }
     </script>
