--- a/proyecto/cartech_web/shop/templates/coches/detail.html
+++ b/proyecto/cartech_web/shop/templates/coches/detail.html
@@ -7,7 +7,7 @@
 <div class="bg-light py-3">
   <div class="container">
     <div class="row">
-      {% with base_url="/list" %}
+      {% with base_url="/coches/selector" %}
       <div class="col-md-12 mb-0"><a href="{{ base_url }}">Coches</a> <span class="mx-2 mb-0">/</span> <strong
           class="text-black">{{ coche.marca }} {{ coche.modelo }}</strong></div>
       {% endwith %}
