probar navbar admin

--- a/proyecto/cartech_web/shop/templates/base/navbar.html
+++ b/proyecto/cartech_web/shop/templates/base/navbar.html
@@ -62,6 +62,8 @@
                     <li><a href="{% url "pedidos:listar_pedidos" %}">Pedidos</a></li>
                     <li><a href="{% url "incidencias:listar_incidencias" %}">Incidencias</a></li>
                     <li><a href="{% url "opiniones:listar_opiniones" %}">Opiniones</a></li>
+                    <li><a href="{% url "shop:about" %}">About</a></li>
+                    <li><a href="{% url "shop:contact" %}">Contact</a></li>
                 </ul>
             </div>
         </nav>
@@ -74,8 +76,8 @@
                     <li><a href="/incidencias/">Incidencias</a></li>
                     <li><a href="{% url "pedidos:mis_pedidos" %}">Mis pedidos</a></li>
                     <li><a href="{% url "opiniones:crear_opinion" %}">Opiniones</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="{% url "shop:about" %}">About</a></li>
+                    <li><a href="{% url "shop:contact" %}">Contact</a></li>
                 </ul>
             </div>
         </nav>
