logo home + login mejorado

--- a/proyecto/cartech_web/shop/templates/base/navbar.html
+++ b/proyecto/cartech_web/shop/templates/base/navbar.html
@@ -11,8 +11,10 @@
                 </div>
 
                 <div class="col-12 mb-3 mb-md-0 col-md-4 order-1 order-md-2 text-center">
-                    <div class="site-logo">
-                        <a href="#" class="js-logo-clone">CarTech</a>
+                    <div>
+                        <a href="#">
+                            <img src="../../../media/imagenes/Logo.jpeg" alt="Logo CarTech" width="200" height="85">
+                        </a>
                     </div>
                 </div>
 
