--- a/proyecto/cartech_web/templates/registration/signup.html
+++ b/proyecto/cartech_web/templates/registration/signup.html
@@ -1,19 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registro - Cartech Web</title>
-    <!-- Agrega aquí tus enlaces a las hojas de estilo (CSS) si es necesario -->
-</head>
-<body>
-    <div style="text-align: center; margin-top: 50px;">
-        <h2>Registro - Cartech Web</h2>
-        <form method="post">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <button type="submit">Registrarse</button>
-        </form>
+{% extends "base/base.html" %}
+{% load static %}
+{% load crispy_forms_tags %} 
+{% block content %}
+
+<div class="container mt-5 mb-5">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <div class="card">
+                <div class="card-body">
+                    <h2 class="text-center mb-4">Registro - Cartech Web</h2>
+                    <form method="post">
+                        {% csrf_token %}
+                        {{ form.as_p }}
+                        <div class="form-group">
+                            <button type="submit" class="btn btn-primary btn-block">Registrarse</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
     </div>
-</body>
-</html>
+</div>
+
+{% endblock %}
+
