--- a/proyecto/cartech_web/pedidos/templates/detalle_pedido.html
+++ b/proyecto/cartech_web/pedidos/templates/detalle_pedido.html
@@ -9,44 +9,58 @@
       <div class="row">
         {% with base_url="/pedidos/" %}
         <div class="col-md-12 mb-0"><a href="{{ base_url }}">Pedidos</a> <span class="mx-2 mb-0">/</span> <strong
-            class="text-black">{{ coche.marca }} {{ coche.modelo }}</strong></div>
+            class="text-black">{{ eleccion.coche.marca }} {{ eleccion.coche.modelo }}</strong></div>
         {% endwith %}
       </div>
     </div>
   </div>
 
-    <div class="site-section">
-      <div class="container">
-        <div class="row">
-          
-          <div class="col-md-6">
-            <h2 class="text-black mr-2">{{ coche.marca }} {{ coche.modelo }}</h2>
-            <p>Id del pedido: {{ pedido.id_pedido }}€</p>
-
-            <p>Precio base: {{ coche.precio_inicial }}€</p>
-
-            {% if accesorios %}
-                    <h3>Accesorios:</h3>
-                    <ul>
-                        {% for accesorio in accesorios %}
-                            <li>{{ accesorio.nombre }} - {{ accesorio.precio }}€</li>
+  <div class="order-info">
+    <h3 class="text-center">Tu pedido {{ pedido.id }}</h3>
+    <table class="table table-bordered">
+        <thead>
+            <tr>
+                <th class="text-center align-middle">Imagen</th>
+                <th class="text-center align-middle">Producto</th>
+                <th class="text-center align-middle">Cantidad</th>
+                <th class="text-center align-middle">Precio unitario</th>
+                <th class="text-center align-middle">Precio total</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for eleccion in elecciones %}
+            <tr>
+                <td class="text-center align-middle">
+                    <img src="{{ eleccion.coche.imagen.url }}" alt="{{ eleccion.coche.modelo }}" width="100" height="100">
+                </td>
+                <td class="align-middle">
+                    <p class="text-center"><strong>{{ eleccion.cantidad }}x {{ eleccion.coche.modelo }}</strong></p>
+                    <p style="margin-bottom: 5px; text-align: center;">Combustible: {{ eleccion.coche.combustible }}</p>
+                    <p style="margin-bottom: 5px; text-align: center;">Conducción: {{ eleccion.coche.conduccion }}</p>
+                    <p style="margin-bottom: 0; text-align: center;">Accesorios:</p>
+                    <ul style="list-style: none; padding: 0; margin: 0; text-align: center;">
+                        {% for accesorio in eleccion.accesorios.all %}
+                        <li>{{ accesorio.nombre }} - Precio: {{ accesorio.precio }} €</li>
                         {% endfor %}
                     </ul>
-                {% else %}
-                    <p>No se han seleccionado accesorios para este coche.</p>
-            {% endif %}
-
-            <p><strong class="text-primary h4">Precio total: {{ precio_total }}€</strong></p>
-
-          </div>
-          
-        </div>
-        </div>
-      </div>
-    </div>
-      
-      
-  </div>
-
+                </td>
+                <td class="text-center align-middle">{{ eleccion.cantidad }}</td>
+                <td class="text-center align-middle">{{ eleccion.get_precio_unitario }} €</td>
+                <td class="text-center align-middle">{{ eleccion.get_precio_total }} €</td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+    <h4 class="text-center">Total: {{ precio_total }} €</h4>
     
+    <!-- Información adicional del pedido -->
+    <div class="text-center">
+        <p><strong>Nombre:</strong> {{ pedido.nombre }}</p>
+        <p><strong>Apellidos:</strong> {{ pedido.apellidos }}</p>
+        <p><strong>Dirección:</strong> {{ pedido.direccion }}</p>
+        <p><strong>Ciudad:</strong> {{ pedido.ciudad }}</p>
+        <p><strong>Código Postal:</strong> {{ pedido.codigo_postal }}</p>
+    </div>
+  </div>
+</div>
 {% endblock %}
