--- a/proyecto/cartech_web/shop/templates/base/navbar.html
+++ b/proyecto/cartech_web/shop/templates/base/navbar.html
@@ -22,7 +22,7 @@
                     <div class="site-top-icons">
                         <ul>
                             {% if user.is_authenticated %}
-                                <li><a href="salir/"><span class="icon icon-person"></span> Cerrar Sesión</a></li>
+                                <li><a href="{% url 'salir' %}"><span class="icon icon-person"></span> Cerrar Sesión</a></li>
                             {% else %}
                                 <li><a href="{% url 'login' %}"><span class="icon icon-person"></span> Iniciar Sesión</a></li>
                             {% endif %}
