--- a/proyecto/cartech_web/shop/templates/accesorios/detalle.html
+++ b/proyecto/cartech_web/shop/templates/accesorios/detalle.html
@@ -7,7 +7,7 @@
 <div class="bg-light py-3">
   <div class="container">
     <div class="row">
-      {% with base_url="/list" %}
+      {% with base_url="/accesorios/list" %}
       <div class="col-md-12 mb-0"><a href="{{ base_url }}">Accesorios</a> <span class="mx-2 mb-0">/</span> <strong
           class="text-black">{{ accesorio.nombre }}</strong></div>
       {% endwith %}
