--- a/proyecto/cartech_web/templates/registration/login.html
+++ b/proyecto/cartech_web/templates/registration/login.html
@@ -12,7 +12,7 @@
                     <form action="{% url 'login' %}" method="post">
                         {% csrf_token %}
                         <div class="form-group">
-                            <label for="username">Usuario:</label>
+                            <label for="username">Correo electrónico:</label>
                             <input type="text" class="form-control" id="username" name="username" required>
                         </div>
                         <div class="form-group">
