--- a/proyecto/cartech_web/carrito/templates/payment_form.html
+++ b/proyecto/cartech_web/carrito/templates/payment_form.html
@@ -1,6 +1,32 @@
+<!-- Agrega las siguientes líneas en el head de tu HTML para incluir Bootstrap -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
 <!-- payment_form.html -->
-<form method="post" action="{% url 'carrito:make_payment' %}">
+<form method="post" action="{% url 'carrito:make_payment' %}" class="container mt-4">
     {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Pay</button>
+
+    <table class="table">
+        <tbody>
+            <tr>
+                <th scope="row">Card Number:</th>
+                <td>{{ form.card_number }}</td>
+            </tr>
+            <tr>
+                <th scope="row">Expiration Month:</th>
+                <td>{{ form.expiry_month }}</td>
+            </tr>
+            <tr>
+                <th scope="row">Expiration Year:</th>
+                <td>{{ form.expiry_year }}</td>
+            </tr>
+            <tr>
+                <th scope="row">CVC:</th>
+                <td>{{ form.cvc }}</td>
+            </tr>
+        </tbody>
+    </table>
+
+    <div class="form-group">
+        <button type="submit" class="btn btn-primary">Pay Now</button>
+    </div>
 </form>
